# Soleme1_Taller_Apps

./: .dockerignore  .gitignore  Dockerfile  README.md  dockerfile  main.py  pyproject.toml  test_main.py
.github/workflows/: main.yml
